# internal/controller/user_controller.go
@@ -4,36 +4,21 @@ import (
 	"fmt"
 	v1 "go-server/api/v1"
 	userdto "go-server/internal/dto/user"
-	"go-server/internal/model"
 	"go-server/internal/service"
-	"strconv"
 
 	"github.com/gin-gonic/gin"
-	"github.com/jinzhu/copier"
 )
-
-// type UserController interface {
-// 	Login(c *gin.Context) // 登录
-// 	Get(c *gin.Context)   // 当前token信息
-
-// 	Create(c *gin.Context)    // 注册
-// 	Delete(c *gin.Context)    // 删除
-// 	Update(c *gin.Context)    // 更新
-// 	GetDetail(c *gin.Context) // 详情
-// 	GetList(c *gin.Context)   // 全部列表
-// 	GetLists(c *gin.Context)  // 分页列表
-// }
 
 func NewUserController(handler *Handler, s service.UserService) *userController {
 	return &userController{
-		Handler:     handler,
-		userService: s,
+		Handler: handler,
+		Service: s,
 	}
 }
 
 type userController struct {
 	*Handler
-	userService service.UserService // 依赖注入
+	Service service.UserService // 依赖注入
 }
 
 // ================= 登录 =================
@@ -43,18 +28,18 @@ type userController struct {
 // @Tags 用户
 // @Accept json
 // @Produce json
-// @Param data body userdto.LoginRequest true "登录参数"
+// @Param data body userdto.CreateRequest true "登录参数"
 // @Success 200 {object} userdto.LoginResponse
 // @Router /user/login [post]
 func (u *userController) Login(c *gin.Context) {
-	var req userdto.LoginRequest
+	var req userdto.CreateRequest
 
 	if err := c.ShouldBindJSON(&req); err != nil {
 		v1.BadRequest(c, "请求参数错误") // // 如果 JSON 里没传 username 或 password，就报错
 		return
 	}
 
-	user, token, err := u.userService.Login(c, req.Username, req.Password)
+	user, token, err := u.Service.Login(c, req.Username, req.Password)
 	if err != nil {
 		v1.Unauthorized(c, "用户名或密码不对") // 401 用户名或密码不对
 		return
@@ -62,37 +47,37 @@ func (u *userController) Login(c *gin.Context) {
 
 	v1.Success(c, userdto.LoginResponse{
 		Token: token,
-		User:  userdto.ToUserPrivateDTO(user),
+		User:  userdto.ToPrivateDTO(user),
 	})
 }
 
-// ================= 注册 =================
+// ================= 创建 =================
 
 // @Summary 用户注册
 // @Tags 用户
 // @Accept json
 // @Produce json
-// @Param data body userdto.LoginRequest true "注册参数"
-// @Success 200 {object} userdto.UserPrivateDTO
+// @Param data body userdto.CreateRequest true "注册参数"
+// @Success 201 {object} userdto.UserPrivateDTO
 // @Router /user/register [post]
 func (u *userController) Create(c *gin.Context) {
-	var req userdto.LoginRequest
+	var req userdto.CreateRequest
 
 	if err := c.ShouldBindJSON(&req); err != nil {
 		v1.BadRequest(c, "请求参数错误")
 		return
 	}
 
-	user, err := u.userService.Create(c, req.Username, req.Password)
+	user, err := u.Service.Create(c, req)
 	if err != nil {
 		v1.BadRequest(c, err.Error())
 		return
 	}
 
-	v1.Created(c, userdto.ToUserPrivateDTO(user))
+	v1.Created(c, userdto.ToPrivateDTO(user))
 }
 
-// ================= 删除用户 =================
+// ================= 删除id信息 =================
 
 // @Summary 删除用户
 // @Tags 用户
@@ -101,13 +86,8 @@ func (u *userController) Create(c *gin.Context) {
 // @Success 204 {string} string "No Content"
 // @Router /user/{id} [delete]
 func (u *userController) Delete(c *gin.Context) {
-	fmt.Print("删除用户\n")
-
-	idStr := c.Param("id")
-
-	id, err := strconv.ParseUint(idStr, 10, 32)
-	if err != nil {
-		v1.BadRequest(c, "无效的用户ID")
+	id, ok := GetUintID(c, "id")
+	if !ok {
 		return
 	}
 
@@ -118,8 +98,8 @@ func (u *userController) Delete(c *gin.Context) {
 		v1.Forbidden(c, "无权限删除他人")
 		return
 	}
-	fmt.Print(idStr, "9999\n")
-	if err := u.userService.Delete(c, uint(id)); err != nil {
+
+	if err := u.Service.Delete(c, uint(id)); err != nil {
 		v1.BadRequest(c, err.Error())
 		return
 	}
@@ -127,42 +107,34 @@ func (u *userController) Delete(c *gin.Context) {
 	v1.NoContent(c)
 }
 
-// ================= 更新当前用户 =================
+// ================= 更新当前id信息 =================
 
 // @Summary 更新当前用户
 // @Tags 用户
 // @Accept json
 // @Produce json
-// @Param data body userdto.UserUpdateRequest true "更新参数"
+// @Param data body userdto.UpdateRequest true "更新参数"
 // @Success 200 {object} userdto.UserPrivateDTO
 // @Router /user/info [put]
 func (u *userController) Update(c *gin.Context) {
-	var req userdto.UserUpdateRequest
+	userID := GetUserIdFromCtx(c)
 
+	var req userdto.UpdateRequest
 	if err := c.ShouldBindJSON(&req); err != nil {
 		v1.BadRequest(c, "请求参数错误"+err.Error())
 		return
 	}
 
-	var userModel model.User
-
-	if err := copier.Copy(&userModel, &req); err != nil {
-		v1.BadRequest(c, "数据转换错误")
-		return
-	}
-
-	userID := GetUserIdFromCtx(c)
-
-	user, err := u.userService.Update(c, userModel, userID)
+	user, err := u.Service.Update(c, userID, req)
 	if err != nil {
 		v1.BadRequest(c, err.Error())
 		return
 	}
 
-	v1.Success(c, userdto.ToUserPrivateDTO(user))
+	v1.Success(c, userdto.ToPrivateDTO(user))
 }
 
-// ================= 获取当前用户 =================
+// ================= 获取token信息 =================
 
 // @Summary 获取当前用户信息
 // @Tags 用户
@@ -174,16 +146,16 @@ func (u *userController) Get(c *gin.Context) {
 	userID := GetUserIdFromCtx(c)
 	fmt.Print(userID, "userID")
 
-	user, err := u.userService.GetDetail(c, userID)
+	user, err := u.Service.GetDetail(c, userID)
 	if err != nil {
 		v1.BadRequest(c, err.Error())
 		return
 	}
 
-	v1.Success(c, userdto.ToUserPrivateDTO(user))
+	v1.Success(c, userdto.ToPrivateDTO(user))
 }
 
-// ================= 获取他人用户 =================
+// ================= 获取id详情 =================
 
 // @Summary 获取用户详情
 // @Tags 用户
@@ -192,17 +164,12 @@ func (u *userController) Get(c *gin.Context) {
 // @Success 200 {object} userdto.UserPublicDTO
 // @Router /user/{id} [get]
 func (u *userController) GetDetail(c *gin.Context) {
-	idStr := c.Param("id")
-
-	// ID 通常是正整数 → 建议用 ParseUint 并转 uint
-	// 普通整数字符串 → Atoi 更简单[支付负数]
-	id, err := strconv.ParseUint(idStr, 10, 32)
-	if err != nil {
-		v1.BadRequest(c, "无效的用户ID")
+	id, ok := GetUintID(c, "id")
+	if !ok {
 		return
 	}
 
-	user, err := u.userService.GetDetail(c, uint(id))
+	user, err := u.Service.GetDetail(c, uint(id))
 	if err != nil {
 		v1.BadRequest(c, err.Error())
 		return
@@ -212,47 +179,63 @@ func (u *userController) GetDetail(c *gin.Context) {
 
 	// 权限控制：自己 vs 他人
 	if currentUserID == uint(id) {
-		v1.Success(c, userdto.ToUserPrivateDTO(user))
+		v1.Success(c, userdto.ToPrivateDTO(user))
 	} else {
-		v1.Success(c, userdto.ToUserPublicDTO(user))
+		v1.Success(c, userdto.ToPublicDTO(user))
 	}
 }
 
-// ================= 用户列表 =================
+// ================= 列表 =================
+
 // @Summary 用户列表
 // @Tags 用户
 // @Produce json
+// @Param data query userdto.RequestQuery false "查询参数"
 // @Success 200 {object} []userdto.UserPublicDTO
 // @Router /user [get]
 func (u *userController) GetList(c *gin.Context) {
-	users, err := u.userService.GetList(c)
+	var q userdto.RequestQuery
+
+	if err := c.ShouldBindQuery(&q); err != nil {
+		v1.BadRequest(c, "参数错误")
+		return
+	}
+
+	users, err := u.Service.GetList(c, q)
 	if err != nil {
 		v1.BadRequest(c, err.Error())
 		return
 	}
 
-	list := userdto.UserListToPublic(users)
+	list := userdto.ListToPublic(users)
 
 	v1.Success(c, list)
 }
 
-// ================= 用户列表 分页 =================
+// ================= 分页列表 =================
 
-// @Summary 用户列表 分页
+// @Summary 用户列表-分页
 // @Tags 用户
 // @Produce json
+// @Param data query userdto.RequestPageQuery false "查询参数"
 // @Success 200 {object} v1.PageResponse
 // @Router /user/lists [get]
-func (u *userController) GetLists(c *gin.Context) {
-	page, pageSize := v1.GetPage(c)
+func (u *userController) GetPageList(c *gin.Context) {
+	var q userdto.RequestPageQuery
 
-	users, total, err := u.userService.GetLists(c, page, pageSize)
+	if err := c.ShouldBindQuery(&q); err != nil {
+		v1.BadRequest(c, "参数错误")
+		return
+	}
+
+	q.Normalize()
+	users, total, err := u.Service.GetPageList(c, q)
 	if err != nil {
 		v1.BadRequest(c, err.Error())
 		return
 	}
 
-	list := userdto.UserListToPublic(users)
+	list := userdto.ListToPublic(users)
 
-	v1.List(c, list, int(total), page, pageSize)
+	v1.List(c, list, int(total), q.Page, q.PageSize)
 }
